--- a/SberDat/Views/Home/FormSent.cshtml
+++ b/SberDat/Views/Home/FormSent.cshtml
@@ -1,41 +1,19 @@
-﻿@{ 
-    if (Session["ico"] == null)
-    {
-        Response.Redirect("~/Home/Index");
-        return;
-    }
-}
+﻿@model int?
 
-@{
+@if (Model == null || Model <= 0)
+{
+    ViewBag.Title = "Form Could Not Be Sent";
+    <h2>Something went wrong</h2>
+    <p>
+        Your form could not be sent. Please <a href="/Home/Buildings">go back</a> and try again.
+    </p>
+}
+else
+{
     ViewBag.Title = "Form Has Been Sent";
+    <h2>Thank you</h2>
+
+    <p>
+        Your form has been sent. You can <a href="/Home/Buildings">go back</a>.
+    </p>
 }
-
-@using DTOs
-@using SberDat.Models
-
-@{ 
-    string final_inspection = Request.Form["final_inspection"];
-    string id = Session["id"].ToString();
-    List<ElementDTO> elements = new List<ElementDTO>();
-
-    foreach (string element_name in Element.elements)
-    {
-        string need_of_investment = Request.Form[element_name + "_need_of_investment"];
-        string state = Request.Form[element_name + "_state"];
-        string amount_of_investment = Request.Form[element_name + "_amount_of_investment"];
-        string notes = Request.Form[element_name + "_notes"];
-        ElementDTO elementDTO = new ElementDTO(element_name, state, need_of_investment, amount_of_investment, notes);
-        elements.Add(elementDTO);
-    }
-
-    PasportDTO pasport = new PasportDTO(final_inspection, id, elements);
-    string connectionString = System.Configuration.ConfigurationManager.ConnectionStrings["Database"].ConnectionString;
-    pasport.InsertIntoDatabase(connectionString);
-}
-
-<h2>Thank you</h2>
-
-<p>
-    Your formular has been sent. You can <a href="/Home/Buildings">go back</a>.
-</p>
-
